src/objects/Meeting_Participant_MERC__c.object
<CustomObject>
    <fields>
        <fullName>Has_Active_MSA_MERC__c</fullName>
        <description>Displays whether the HCP currently has an Active MSA agreement with Lilly. Created 02/13/2014 by KLorenti, Mavens Consulting</description>
        <formula>IF ( Account_MERC__r.Has_MSA_Contract_MERC__c = &quot;Yes&quot;, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <inlineHelpText>Whether the HCP currently has an Active MSA agreement with Lilly</inlineHelpText>
        <label>Has Active MSA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Signed_Contract_MERC__c</fullName>
        <description>Displays if HCP has an Active Contract. Created 02/13/2014 by KLorenti, Mavens Consulting</description>
        <formula>IF ( Number_of_Completed_Contracts_MERC__c &gt; 0, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Whether the HCP currently has a signed Work Order or Single Event Contract for the Meeting</inlineHelpText>
        <label>Has Signed Contract</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Travel_Process_MERC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this meeting participant has a travel process. Used by the meeting process workflow on the travel itinerary object. This fied is set by the MERC_MeetingProcessLogicHandler : MERC : Created on 17/07/2015 by Kyle Thornton, Mavens Consulting</description>
        <label>Has Travel Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Higher_Fee_Approval__c</fullName>
        <description>Controls approval of a Proposed Fee that is higher than the maximum affiliate amount. 6th Nov 2013.  Oliver Dunford. 2013.</description>
        <label>Exception Approval</label>
        <picklist>
            <picklistValues>
                <fullName>Not Required</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hotel_No_Longer_Required_MERC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by portal to capture if Meeting Participant originally required accommodations, but changed their mind and no longer need them.  Created 04/02/2014 by KLorenti, Mavens Consulting</description>
        <label>Was Hotel offered and then declined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hotel_Required_MERC__c</fullName>
        <description>When a Meeting Owner is registering participants manually in Mercury, these attributes may be populated. Created 10/28/2013 by KLorenti, Mavens Consulting</description>
        <label>Hotel Required</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hotel_Step_Complete_MERC__c</fullName>
        <description>Used by portal. Determines if Meeting Participant has completed the Accommodations step on the portal when RSVP&apos;ing to a Meeting. Created 04/02/2014 by KLorenti, Mavens Consulting</description>
        <formula>IF((!ISBLANK(Date_of_Check_In_MERC__c) &amp;&amp; !ISBLANK(Date_of_Check_Out_MERC__c)) ||   Hotel_No_Longer_Required_MERC__c , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hotel Step Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Immediate_Source_MERC__c</fullName>
        <defaultValue>&quot;Mercury&quot;</defaultValue>
        <description>Immediate Source information. The Veeva Interface will stamp Veeva as the Source if the Meeting or Meeting Participant comes from Veeva and not Mercury. This is needed for the AODS interface.
Created by John A Adams 1/7/2014</description>
        <label>Immediate Source</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_CAP_Roll_Up_MERC__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Field created to indicate whether or not CAP should be calculated on the Meeting Participant for the Meeting. Created 12/2/2013 by KLorenti, Mavens Consulting.</description>
        <label>Include CAP Roll Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inst_Notification_Lead_Time_MERC__c</fullName>
        <description>Shows number of days before meeting that the institutional notification was sent. Created 04/29/2014 by KLorenti, Mavens Consulting</description>
        <formula>DATEVALUE(Meeting_MERC__r.Start_Time_of_Meeting_MERC__c) - Institutional_Notification_Sent_MERC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of days before meeting that the institutional notification was sent.</inlineHelpText>
        <label>Institutional Notification Lead Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Institutional_Notif_Validation_Sent_MERC__c</fullName>
        <description>Record last date of DI validation and tracking.</description>
        <inlineHelpText>Date that request for validation of the Institutional Notification information on file was sent.</inlineHelpText>
        <label>Institutional Notif Validation Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Institutional_Notification_Complete_MERC__c</fullName>
        <description>Used by portal. Pulls from Account record to indicate if Institutional Notification Step is completed by HCP. Created 04/03/2014 by KLorenti, Mavens Consulting</description>
        <formula>Account_MERC__r.Institutional_Notif_Info_Exists_MERC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Institutional Notification Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Institutional_Notification_Sent_MERC__c</fullName>
        <description>Used to input date the institutional notifications were sent out for the meeting participant. Also needed for reporting. Created 04/29/2014 by KLorenti, Mavens Consulting</description>
        <inlineHelpText>Date that all designated individual notifications and any responses required for the secondary method has been received.  Notification is complete.</inlineHelpText>
        <label>Institutional Notification Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Instnl_Notif_Sent_Secondary_Method_MERC__c</fullName>
        <description>Date when all designated individuals were notified and asked to respond.</description>
        <inlineHelpText>Secondary method only. Date when all designated individuals were notified and asked to respond.  Notification is not yet complete; responses are pending.</inlineHelpText>
        <label>Institutional Notif Sent-SecondaryMethod</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Received_Date_MERC__c</fullName>
        <description>Date that CMS Regional has received the valid invoice (if required) - populated via process flow : MERC : Created on 13/08/2015 by Billy Ho, Mavens Consulting.</description>
        <inlineHelpText>Date that CMS Regional has received the valid invoice (if required)</inlineHelpText>
        <label>Invoice Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Required_MERC__c</fullName>
        <description>Pulls &quot;Invoice Required&quot; Value from Account through to Meeting Participant for exposure to Mercury Users : MERC : Created on 24/02/15 by Mike Cashman, Mavens Consulting</description>
        <formula>TEXT( Account_MERC__r.Invoice_Required_MERC__c )</formula>
        <inlineHelpText>Defines whether CMS Cork should expect an invoice in order to pay a meeting participant or not.  This is pulled down from the HCP Profile.  If blank, the equivalent field on the HCP Profile should be updated by CMS Cork to maintain HCP data.</inlineHelpText>
        <label>Invoice Required</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Template_Needed_MERC__c</fullName>
        <description>Captures whether meeting participant needs an Invoice Template. Oliver Dunford 5th November 2013.</description>
        <label>Invoice Template Needed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Items_to_be_Sponsored_MERC__c</fullName>
        <description>Indicate items to be sponsored. Created 01/14/2014 by KLoreneti, Mavens Consulting</description>
        <label>Items to be Sponsored</label>
        <picklist>
            <picklistValues>
                <fullName>Accommodation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Pocket Expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rail/Bus Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registration</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Justification_MERC__c</fullName>
        <description>Justification for Service. Moving from HCP Contract. Created 11/18/2013 by KLorenti, Mavens Consulting.</description>
        <inlineHelpText>An HCP must NOT be selected for any business relationship in order to influence or reward an HCP for past, present or future support of Lilly products, to gain access to a customer or formulary decision makers, to influence the outcome of clinical trial.</inlineHelpText>
        <label>Justification</label>
        <picklist>
            <picklistValues>
                <fullName>Recognized as a Thought Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Significant topic research / background</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outstanding speaking ability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trained to speak on this topic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Therapeutic Area knowledge / experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recognized by local peers as a SME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Published author in the Therapeutic Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proven effective Speaker / Moderator</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Logistic_Compliance_Comments_MERC__c</fullName>
        <description>Captures free-text logistics information to share with meeting teams : MERC : Created on 17/04/2015 by Oliver Dunford, Mavens Consulting</description>
        <inlineHelpText>Record appropriate comments for this participant viewable by CMS Regional and Local CMS teams. Follow applicable country privacy requirements</inlineHelpText>
        <label>Logistic/Compliance Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MERC_Hotel_Name__c</fullName>
        <description>Field used to display the hotel name of a Meeting Participant in report LINK_Master_report_MERC. Created 11/03/2016 by Edith Sereno, Mavens Consulting.</description>
        <label>Hotel Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MERC_Janrain_Account_Status__c</fullName>
        <description>This field copies the Janrain Account Status from the Account record for a HCP; MERC; Created on 14/04/2016 by E. Sereno;NS</description>
        <formula>TEXT( Account_MERC__r.MERC_Janrain_Account_Status__c )</formula>
        <inlineHelpText>The Janrain Account Status for a HCP.</inlineHelpText>
        <label>Janrain Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MERC_Local_Legal_Compliance_Complete__c</fullName>
        <description>Used to display the status of local / compliance step. Created 07/03/2016 by Edith Sereno, Mavens Consulting</description>
        <inlineHelpText>If additional Local Legal/Compliance requirements apply to enable attendance, use this field to track completion.</inlineHelpText>
        <label>Local Legal/Compliance Complete</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MERC_Meeting_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup Relationship from Meeting Participant to Meeting Group. Created 02/03/2016 by Edith Sereno, Mavens Consulting.</description>
        <label>Meeting Group</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>MERC_Meeting_Group__c.MERC_Meeting__c</field>
                <operation>equals</operation>
                <valueField>$Source.Meeting_MERC__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>MERC_Meeting_Group__c</referenceTo>
        <relationshipLabel>Meeting Participants</relationshipLabel>
        <relationshipName>Meeting_Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MERC_Registration_Status__c</fullName>
        <description>Created to track the status of Meeting Participants registration (web and paper processes). Created 03/03/2016 by Mavens Consulting</description>
        <inlineHelpText>This field shows the status of the review of this participant’s registration.</inlineHelpText>
        <label>Registration Status</label>
        <picklist>
            <controllingField>Status_MERC__c</controllingField>
            <picklistValues>
                <fullName>Pending Review</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Maximum_Fee_MERC__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Calculates a service providers maximum fee by multiplying the total hours or service against the maximum hourly rate and incorporating the travel percentage adjustment. Populated by workflow to ensure the field is available on the page in edit mode. Oliver Dunford 20th March 2014.</description>
        <inlineHelpText>Based upon the maximum hourly rate multiplied by total hours of service. Includes Travel Adjustment.</inlineHelpText>
        <label>Maximum Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maximum_Fee_last_updated_MERC__c</fullName>
        <description>To capture last modified date of Maximum Fee if it has been changed.</description>
        <label>Maximum Fee last updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Maximum_Rate_MERC__c</fullName>
        <description>Maximum Rate based on Country and Tier
Created by John A Adams 10/31/2013</description>
        <label>Maximum Hourly Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meeting_Active_Confirm_Fee_Date_MERC__c</fullName>
        <description>Returns the greater of two dates, either the date the meeting was set to Active or the date that the Service Providers Final Fee was Confirmed. Used to report on SLAs against the time taken to Sign Contracts : MERC : Created on 20/04/2015 by Oliver Dunford</description>
        <formula>IF(ISNULL(Meeting_MERC__r.Meeting_Active_Date_MERC__c) &amp;&amp; NOT ISNULL(Final_Fee_Confirmed_Date_MERC__c), Final_Fee_Confirmed_Date_MERC__c, IF(NOT ISNULL(Meeting_MERC__r.Meeting_Active_Date_MERC__c) &amp;&amp; ISNULL(Final_Fee_Confirmed_Date_MERC__c), Meeting_MERC__r.Meeting_Active_Date_MERC__c, IF(ISNULL(Meeting_MERC__r.Meeting_Active_Date_MERC__c) &amp;&amp; ISNULL(Final_Fee_Confirmed_Date_MERC__c), Final_Fee_Confirmed_Date_MERC__c , IF(Meeting_MERC__r.Meeting_Active_Date_MERC__c &gt; Final_Fee_Confirmed_Date_MERC__c, Meeting_MERC__r.Meeting_Active_Date_MERC__c,Final_Fee_Confirmed_Date_MERC__c))))</formula>
        <inlineHelpText>Returns the greater of two dates, either the date the meeting was set to Active or the date that the Service Provider&apos;s Final Fee was Confirmed</inlineHelpText>
        <label>Meeting Active/Confirm Final Fee Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meeting_Date_MERC__c</fullName>
        <formula>Meeting_MERC__r.Date_of_Event_MERC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meeting_End_Date_MERC__c</fullName>
        <formula>Meeting_MERC__r.End_Date_of_Event_MERC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meeting End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meeting_External_MERC__c</fullName>
        <formula>Meeting_MERC__r.Mercury_External_Id_MERC__c</formula>
        <label>Meeting External</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_MERC__c</fullName>
        <description>Master-Detail Relationship from Meeting Participant to Meeting. Created 9/30/2013 by KLorenti.</description>
        <label>Meeting</label>
        <referenceTo>Meeting_MERC__c</referenceTo>
        <relationshipLabel>Meeting Participants</relationshipLabel>
        <relationshipName>Meeting_Participants_del</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Meeting_Owner_Email_MERC__c</fullName>
        <description>Meeting Owner email address stamped from Meeting. Created 01/19/2014 by KLorenti, Mavens Consulting</description>
        <label>Meeting Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Meeting_Owner_Global_Id_MERC__c</fullName>
        <description>Oliver Dunford 6th Jan: Pulls the Meeting Owner&apos;s Global Id from the Meeting Owner on the Meeting Object. Needed for AODS Interface.</description>
        <formula>Meeting_MERC__r.Owner_Master_Id_MERC__c</formula>
        <label>Meeting Owner Global Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Process_Logic_Key_MERC__c</fullName>
        <description>Used to compare Meeting Participant Key against the Key in Meeting Process Logic object. This will then find a match and generate automation : MERC : Created on 22/06/2015 by Oliver Dunford, Mavens Consulting</description>
        <formula>TEXT(Meeting_MERC__r.Initiate_Delegate_Management_MERC__c) &amp; &quot;;&quot; &amp;  TEXT(Status_MERC__c) &amp; &quot;;&quot; &amp; IF(Sales_Rep_MERC__c &lt;&gt; &quot;&quot; , &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <inlineHelpText>Used to match a corresponding key from the Meeting Process Logic object.  This will then trigger the necessary automation</inlineHelpText>
        <label>Meeting Process Logic Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mercury_External_Id_MERC__c</fullName>
        <description>Generated by Workflow used for Integration with External Systems.
Created by J Adams 12/10/2013</description>
        <externalId>true</externalId>
        <label>Mercury External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Minimum_Fee_MERC__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Calculates a service providers minimum fee by multiplying the total hours or service against the minimum hourly rate and incorporating the travel percentage adjustment.  Populated by workflow to ensure the field is available on the page in edit mode.  Oliver Dunford 20th March 2014.</description>
        <inlineHelpText>Based upon the minimum hourly rate multiplied by total hours of service. Includes Travel Adjustment.</inlineHelpText>
        <label>Minimum Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Rate_MERC__c</fullName>
        <description>Minimum rate based on Country and Tier.
Created by John A Adams 10/31/2013</description>
        <label>Minimum Hourly Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Next_Follow_Up_Date_MERC__c</fullName>
        <description>The Current Process State Task Due Date of the Meeting Participant - stamped from Meeting Tasks object : MERC : Created on 29/04/2015 by Oliver Dunford, Mavens Consulting</description>
        <label>Next Follow Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notification_Method_MERC__c</fullName>
        <description>Record whether secondary method is used for notification</description>
        <inlineHelpText>Select the method of notification. This selection drives the corporate metrics for the Institutional Notification program.</inlineHelpText>
        <label>Notification Method</label>
        <picklist>
            <picklistValues>
                <fullName>Primary Method (ON TIME)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary Method (LATE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SECONDARY Method</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary or Secondary Method NOT COMPLETED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Notification not required (SELF-EMPLOYED)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable per business process</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Completed_Contracts_MERC__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Populated via a lookup rollup summary trigger. Indicates the number of completed HCP Contract records related to this meeting participant. Used to indicate if the MP has a signed contract. - KT: 2014/05/15</description>
        <label>Number of Completed Contracts</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Contracts_MERC__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Populated via a lookup rollup summary trigger. Indicates the number of HCP Contract records related to this meeting participant. Used to ensure no more than one contract can be created for a meeting participant. - KT: 2014/05/15</description>
        <label>Number of Contracts</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Override_MP_Status_Validation_MERC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to ensure that managing daily attendance via the manage daily attendance page does not prevent the update of MP Status via cost : MERC : Created on 04/11/2015 by Oliver Dunford, Mavens Consulting</description>
        <label>Override MP Status Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partial_Payment_Amount_MERC__c</fullName>
        <description>HCP Care can enter a partial payment amount in the case when the HCP needs a partial payment but the meeting is cancelled.  The partial payment needs to update the final fee so the paid cap is adjusted correctly. Created 12/18/2013 by KLorenti, Mavens Consulting</description>
        <label>Partial Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Partial_Payment_Justification_MERC__c</fullName>
        <description>Capture the justification reason if part payment was required. Created 10/29/2013 by KLorenti, Mavens Consulting</description>
        <label>Partial Payment Justification Needed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Participant_Approved_MERC__c</fullName>
        <description>Captures if the participant has been approved to be invited to the Meeting. Created 11/5/2013 by KLorenti, Mavens Consulting</description>
        <label>Participant Approved</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Participant_Search_MERC__c</fullName>
        <description>Ensures the Meeting Participant is searchable. Oliver Dunford 6th Nov 2013</description>
        <label>Participant Search</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participant_Typ_MERC__c</fullName>
        <description>Type of participant stamped into Meeting Participant record using workflow at creation or edit from the Account.  Created by John Adams on 12/9/2013</description>
        <label>Participant Type</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payee_Info_Consent_MERC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by portal. Indicates when Meeting Participant has completed the Payee Information Consent during meeting registration. Created 04/03/2014 by KLorenti, Mavens Consulting</description>
        <label>Payee Information Consent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payee_and_Bank_Info_Complete_MERC__c</fullName>
        <description>Used by portal. Pulled from Account to display whether Payee and Bank Information step is complete for HCP Info Package. Created 04/03/2014 by KLorenti, Mavens Consulting</description>
        <formula>Account_MERC__r.Payee_and_Bank_Info_Complete_MERC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payee and Bank Info Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Required_MERC__c</fullName>
        <description>Pulls in if the contract is without payment.
Created by John A Adams 10/31/2013</description>
        <formula>TEXT(Account_MERC__r.Payment_Required_MERC__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Required</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Required_for_Meeting_MERC__c</fullName>
        <description>Specifies if payment is created for the particular meeting. Created 12/13/2013 by KLorenti, Mavens Consulting.</description>
        <label>Payment Required for Meeting</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Person_Contact_Id_MERC__c</fullName>
        <description>Stamped by trigger, needed for ET integration</description>
        <label>Contact Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential_Cross_Border_Activity_MERC__c</fullName>
        <description>Shows all Participants with a different country of residence to that of the meeting : MERC : Created on 21/07/2014 by Katy Lorenti, Mavens Consulting</description>
        <formula>IF(TEXT(Meeting_MERC__r.Event_Country_MERC__c) &lt;&gt; Country_of_Residence_MERC__c, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <inlineHelpText>Highlights those instances where the Participant&apos;s Country of Residence differs from that of the meeting and additional approvals or processes may be required</inlineHelpText>
        <label>Potential Cross Border Activity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential_ToV_MERC__c</fullName>
        <description>Used to determine whether a specific Meeting Participant has potential applicable ToV e.g. Travel, Hotel etc : MERC : Created on 03/11/2015 by Oliver Dunford, Mavens Consulting</description>
        <inlineHelpText>This will be automatically triggered if one of these attributes apply: MP Air or Hotel=yes; MP is Ind. Sponsorship; MP with Travel Itinerary; Meeting Days. The field will not be updated if conditions change.</inlineHelpText>
        <label>Potential ToV</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Departure_Airport_MERC__c</fullName>
        <description>Records Meeting Participant&apos;s preferred departure airport. Created by John A Adams 3/19/2014</description>
        <label>Preferred Departure Airport</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Preferred_Departure_Depot_MERC__c</fullName>
        <description>Records Meeting Participant&apos;s preferred departure bus depot. Created by John Lorenti 2014-05-02</description>
        <label>Preferred Departure Depot</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Preferred_Departure_Station_MERC__c</fullName>
        <description>Records Meeting Participant&apos;s preferred departure train station. Created by John A Adams 3/19/2014</description>
        <label>Preferred Departure Station</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Preparation_Time_Hrs_MERC__c</fullName>
        <description>Preparation time for patricipant. Created 10/10/2013 by KLorenti.</description>
        <inlineHelpText>Rounds Preparation Time to nearest 15 minutes upon save.  A preparation value of 1.25 indicates 1hr and 15 minutes.</inlineHelpText>
        <label>Preparation Time (hrs)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Presentation_Approval_Needed_MERC__c</fullName>
        <description>Whether the presentation needs approval beforehand. Oliver Dunford 5th November.</description>
        <label>Presentation Approval Needed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prior_Parent_Id_GLBL__c</fullName>
        <description>The Global Id of the account which this record was merged from. This field is set when an account merge occurs and the record belonged to the losing account.</description>
        <label>Prior Parent Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_State_MERC__c</fullName>
        <description>The Current Process State of the Meeting Participant - stamped from Meeting Tasks object : MERC : Created on 29/04/2015 by Oliver Dunford, Mavens Consulting</description>
        <label>Process State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processing_of_Data_Consent_MERC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by portal to indicate that the Meeting Participant agrees to Lilly gathering this their information related needed for RSVP to meeting. Created 04/02/2014 by KLorenti, Mavens Consulting</description>
        <label>Processing of Data Consent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proposed_Final_Fee_MERC__c</fullName>
        <description>Stores the Proposed Fee.  Is needs to go through a confirmation process with the HCP and Affiliate if it exceeds the Maximum Amount. Oliver Dunford 6th Nov.</description>
        <label>Proposed Final Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Proposed_Final_Fee_Rollup_MERC__c</fullName>
        <description>&quot;Shadow&quot; field for the Proposed_Final_Fee_MERC__c to be used for CAP rollups.</description>
        <label>Proposed Final Fee Rollup MERC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>